--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "async": "^1.4.2",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
+    "busboy-body-parser": "0.0.9",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
     "ejs": "~0.8.5",
     "express": "~4.0.0",
     "express-session": "~1.0.0",
+    "gridfs-stream": "^1.1.1",
     "method-override": "~1.0.0",
     "mongoose": "~3.8.1",
+    "mongoose-fs": "^0.2.7",
     "morgan": "~1.0.0",
     "nodemailer": "^1.4.0",
     "nodemon": "~1.4.1",
